# DataCiteCheck

./: .gitignore  README.md  check-datacite.sh  datacite-check-output.csv  main.py  pyproject.toml
